<resources>
    <string name="app_name" translatable="false">snail</string>
    <string name="tap" translatable="false">tap</string>
    <string name="back">back</string>
    <string name="settings_general">General</string>
    <string name="settings_game">Game</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="language_select">Language</string>
    <string name="cheat_sheet">Cheat Sheet</string>
    <string name="title_activity_cheat_sheet" translatable="false">CheatSheetActivity</string>
    <string name="editor">Editor</string>
    <string name="new_mc">new</string>
    <string name="delete_mc">delete</string>
    <string name="select_mc">select</string>
    <string name="menu" translatable="false">menu</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="edit_mc">Edit Morse Character</string>
    <string name="edit_rep">Edit Rep</string>
    <string name="edit_seq">Edit Sequence</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="theme_select">Theme</string>
    <string name="error_empty_name">Estandarra ezin da hutsik egon!</string>
    <string name="ok_new_std">New standard created!</string>
    <string name="error_std_exists">Standard already exists!</string>
    <string name="msg_create_mc">Create New Morse Code</string>
    <string name="error_no_stds">No standards available!</string>
    <string name="msg_select_std_del">Select a standard to delete</string>
    <string name="error_one_std">At least one standard must remain</string>
    <string name="msg_confirm_del">Confirm Delete</string>
    <string name="msg_are_you_sure">Are you sure you want to delete</string>
    <string name="ok_updated">updated!</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="not_word_of_the_day">Word of the Day!</string>
    <string name="exit">Exit</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">confirm password</string>
    <string name="shop">Shop</string>
    <string name="account">Profile</string>
    <string name="map">Map</string>
    <string name="history">history</string>
    <string name="achievements">achievements</string>
    <string name="col_max">max distance:</string>
    <string name="col_min">min distance:</string>
    <string name="col_distance">crawled:</string>
    <string name="col_time">time:</string>
    <string name="dialog_name">Name</string>
    <string name="dialog_pass">Password</string>
    <string name="dialog_confirm_pass">Confirm Password</string>
    <string name="dialog_log">login</string>
    <string name="dialog_cancel">cancel</string>
    <string name="dialog_register">register</string>
    <string name="focus">focus</string>
    <string name="msg_location_perm">Location permission required to use the map</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="app_widget_description" translatable="false">cool snail widget</string>
    <string name="no_achievements">no achievements</string>
    <string name="no_runs">no runs</string>
    <string name="name_your_snail">Name your snail</string>
</resources>