<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:padding="20dp"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <EditText
        android:id="@+id/nameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_name" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_pass"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirmPasswordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_confirm_pass"
        android:inputType="textPassword" />
</LinearLayout>
