<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UserProfileActivity">

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/switchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="4dp"
        android:text="@string/achievements"
        app:layout_constraintEnd_toStartOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/snail" />

    <TextView
        android:id="@+id/snailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="alfonso"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/profilePic"
        app:layout_constraintStart_toStartOf="@+id/profilePic"
        app:layout_constraintTop_toBottomOf="@+id/profilePic" />

    <TableLayout
        android:id="@+id/quickStats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:shrinkColumns="1"
        android:stretchColumns="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profilePic"
        app:layout_constraintTop_toBottomOf="@+id/backButton">

        <TableRow android:id="@+id/timeRow">
            <TextView
                android:padding="4dp"
                android:text="@string/col_time"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timeVal"
                android:padding="4dp"
                android:text="01:32:45" />
        </TableRow>
        <TableRow android:id="@+id/distanceRow">
            <TextView
                android:padding="4dp"
                android:text="@string/col_distance"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/distanceVal"
                android:padding="4dp"
                android:text="3.4 km" />
        </TableRow>
        <TableRow android:id="@+id/maxDistance">
            <TextView
                android:padding="4dp"
                android:text="@string/col_max"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/maxDistanceVal"
                android:padding="4dp"
                android:text="1.1km" />
        </TableRow>
        <TableRow android:id="@+id/minDistance">
            <TextView
                android:padding="4dp"
                android:text="@string/col_min"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/minDistanceVal"
                android:padding="4dp"
                android:text="200m" />
        </TableRow>
    </TableLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/profileFragmentContainer"
        android:name="com.example.theimmortalsnail.fragments.AchievementsFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/snailName" />

</androidx.constraintlayout.widget.ConstraintLayout>